<resources>
    <string name="app_name">NinerNewsNet</string>
    <string name="app_groupname">Group 15</string>
    <string name="app_groupmembers">Naseem Jones\nJordan Moss\nMatthew Pachapa\nPatrick Riley\nJakeem Smith</string>

    <string name="title_activity_main">Main</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="user_prompt">Please enter your display name:</string>
    <string name="name">Name</string>
    <string name="start">START</string>

    <string name="profile_select_button">Select Profile</string>
    <string name="select_interval_button">Select Interval</string>
    <string name="notification_options_button">Notification Options</string>

    <string name="notification_settings_label">Notification on</string>
    <string name="notification_option_new_articles">New Articles</string>

    <string name="interval_update_option">Update every</string>

    <string name="articles_updated">Articles Updated</string>
    <string name="new_articles">New articles are available</string>

    <string name="item_search">Search</string>
    <string name="item_local">Local news</string>
    <string name="item_uncc">UNCC news</string>

    <string name="app_hello">Hello!</string>
</resources>
