<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<item
    android:id="@+id/action_search"
    android:icon="@android:drawable/ic_menu_search"
    android:title="@string/item_search"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    app:showAsAction="ifRoom" />

    <group android:id="@+id/feeds">
        <item
            android:id="@+id/action_local_feed"
            android:orderInCategory="100"
            android:title="@string/item_local"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_uncc_feed"
            android:orderInCategory="101"
            android:title="@string/item_uncc"
            app:showAsAction="never" />
    </group>


</menu>
